--- a/documents/paper/ms_v0.0.tex
+++ b/documents/paper/ms_v0.0.tex
@@ -22,11 +22,15 @@
 
 \begin{document}
 
-\title{Joint photometric modeling for improved measurements in imaging surveys.}
+\title{Joint photometric modeling for improved measurements in imaging
+surveys.}
 \author{Ross~Fadely\altaffilmark{1} \&
         David~W.~Hogg\altaffilmark{1,2}}
-\altaffiltext{1}{Center~for~Cosmology~and~Particle~Physics, Department~of~Physics, New~York~University, 4~Washington~Place, New~York, NY 10003, USA}
-\altaffiltext{2}{Max-Planck-Institut f\"ur Astronomie, K\"onigstuhl 17, 69117 Heidelberg, Germany}
+\altaffiltext{1}{Center~for~Cosmology~and~Particle~Physics,
+Department~of~Physics, New~York~University, 4~Washington~Place, New~York,
+NY 10003, USA}
+\altaffiltext{2}{Max-Planck-Institut f\"ur Astronomie, K\"onigstuhl 17, 69117
+Heidelberg, Germany}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -74,7 +78,6 @@ to describe the quasar luminosity function (CITE?) while also enabling the
 discovery of new streams and satellites around the Milky Way (CITE).
 
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Section - Method
@@ -82,27 +85,12 @@ discovery of new streams and satellites around the Milky Way (CITE).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Extreme Deconvolution}
 
-\begin{itemize}
-\item Mixture of Gaussians where each datum's observational uncertainty is accounted for.
-\item cite bovy and applicable works.
-\item regularization to avoid singularities
-\end{itemize}
-
-\subsection{Posterior estimation}
-
-After inference, the XD mixture provides an estimation for the noiseless distribution of 
-the data:
-
-\begin{eqnarray}\displaystyle
-p(\noiselessdata) = \sum_j^K \frac{\alpha_j}{\sqrt{2\pi\det{|\xdcov|}}} \exp \left (-\frac{1}{2}(\noiselessdata - \vmu_j)^\transpose \xdcov^{-1}(\noiselessdata - \vmu_j) \right )
-\quad .
-\label{eqn:noiseless}
-\end{eqnarray}
-
-In a hierarchical sense, this learned distribution provides a prior distribution on what the 
-value of a datum should be --- the distribution of the denoised data $\noiselessdata$ is 
-learned for all the observations via XD.  Using Bayes' Rule, we can estimate the posterior 
-value for a given datum
+Our goal is to construct a model of the joint distribution of the space of
+possible photometric measurements.  The key idea is that once we have learned
+what the underlying distribution can be, we can utilize this knowledge as a
+prior distribution over what the set of \emph{true} observations should be for
+a given object.  That is, for each datum we want to construct the posterior
+for the true photometric quantities -
 
 \begin{eqnarray}\displaystyle
 p(\truedatum | \datum) & \propto & p(\datum | \truedatum) p(\truedatum) \\
@@ -111,10 +99,42 @@ p(\truedatum | \datum) & \propto & p(\datum | \truedatum) p(\truedatum) \\
 \label{eqn:posterior}
 \end{eqnarray}
 
-\noindent where we assume that the prior for $\truedatum$ is $p(\noiselessdata)$.  Since 
-$p(\noiselessdata)$ is a sum of Gaussian densities, and we multiply this by a Gaussian 
-likelihood, the posterior is also a sum of Gaussians.  That is, the posterior for the true 
-value of the observation is
+\noindent where $\datum$ is the observed vector of photometric measurements, 
+$\truedatum$ is the set of values we would have observed in the absense of
+noise, and $\datumcov$ is the covariance for the observation which is
+constructed from our (e.g, the survey's) noise estimates.  The distribution 
+$p(\truedatum)$ is the prior distribution we wish to learn, and the likelihood
+$p(\datum | \truedatum)$ is assumed to be Gaussian.  Since we are learning the
+prior distribution from a set of many observations, this is refered to as a
+multilevel or hierarchical model.
+
+The art in building a hierachical model is deciding the structure of the
+distributions involved -- how distributions are parameterized, what is held
+fixed or considered know, and what the relationships are between the various
+distributions.  We believe the distribution of $p(\truedatum)$ can be quite 
+complex, and it is not obvious what the right description of the distribution
+might be.  For these reasons, we choose to use Extreme Deconvolution 
+
+After inference, the XD mixture provides an estimation for the noiseless
+distribution of the data:
+
+\begin{eqnarray}\displaystyle
+p(\noiselessdata) = \sum_j^K \frac{\alpha_j}{\sqrt{2\pi\det{|\xdcov|}}} \exp \left (-\frac{1}{2}(\noiselessdata - \vmu_j)^\transpose \xdcov^{-1}(\noiselessdata - \vmu_j) \right )
+\quad .
+\label{eqn:noiseless}
+\end{eqnarray}
+
+In a hierarchical sense, this learned distribution provides a prior
+distribution on what the value of a datum should be --- the distribution of
+the denoised data $\noiselessdata$ is learned for all the observations via XD.
+Using Bayes' Rule, we can estimate the posterior value for a given datum
+
+
+\noindent where we assume that the prior for $\truedatum$ is
+$p(\noiselessdata)$.  Since $p(\noiselessdata)$ is a sum of Gaussian
+densities, and we multiply this by a Gaussian likelihood, the posterior is
+also a sum of Gaussians.  That is, the posterior for the true value of the
+observation is
 
 \begin{eqnarray}\displaystyle
 p(\truedatum | \datum) & \propto & \sum_j^K \frac{\alpha_j}{\sqrt{2\pi\det{|\postcov|}}} \exp \left (-\frac{1}{2}(\truedatum - \postmu)^\transpose \postcov^{-1}(\truedatum - \postmu) \right ) \\
