--- a/documents/paper/ms_v0.0.tex
+++ b/documents/paper/ms_v0.0.tex
@@ -217,6 +217,23 @@ color is clear and well tracked by the XD $N_{\rm point}$ components.  Though
 galaxies have less defining characteristics, it is clear that the XD mixture 
 also tracks their distribution well.
 
+\begin{figure}
+\centering
+\includegraphics[clip=true, trim=1.5cm 0.5cm 1.5cm 0.5cm,
+  width=16cm]{fig1.png}
+\caption{Shown are three different projections of one tenth of the DR10
+photometric data used (black points), with the top/bottom row corresponding
+objects classified as stars/galaxies (\ttt{type} $=6, 3$).  Gray contours
+indicate the different XD components.  For the top we only plot the
+$N_{\rm point}$ components while in the bottom we plot the rest.  Note,
+however, when we compute our model we do not use SDSS classifications -- all
+data is modeled with the combination of both top and bottom contours.  Note
+the components modeling psfmag minus modelmag for starlike objects prefer
+small variance, and generally the model follows the data well.
+}
+\label{fig:contours}
+\end{figure}
+
 In figure \ref{fig:posteriors}, we show the posterior distributions for 3
 stars and 3 galaxies at different magnitudes.
 
